fixed alignment

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,4 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200&family=Varela+Round&family=Work+Sans:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap");
+
+.App {
+  min-height: 100vh;
+  /* display: ; */
+  background-image: url("./background.png");
+  background-position: center;
+  background-size: cover;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(136, 136, 136, 0.281);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+/* @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200&family=Varela+Round&family=Work+Sans:wght@300&display=swap');
 
 .App{
   min-height: 100vh;
@@ -7,4 +30,4 @@
   background-size: cover;
   background-position: center;
   color: black;
-}
+} */
